Fixed background so that it covers page

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
   background-image: url("./slate_bg.jpg");
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
